<resources>
    <string name="app_name">Wall GOT HD</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="privacy_policy_url">https://www.your.com/privacyurl</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vishal+Android+Apps</string>

    <!-- true if want to use RTL else false -->
    <string name="isRTL">false</string>

    <string name="tab_text_1">Latest</string>
    <string name="tab_text_2">Popular</string>
    <string name="tab_text_3">Rated</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="gifs">GIFs</string>
    <string name="favourite">Favourite</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_about">About</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading">Loading..</string>
    <string name="latest_wallpaper">Latest Wallpaper</string>
    <string name="view_all">View All</string>
    <string name="no_data_found">No Data Found</string>
    <string name="mostviewed">Most Viewed</string>
    <string name="most_rated">Most Rated</string>
    <string name="amazing_wall">Amazing Wallpapers in your way</string>
    <string name="title_activity_wallpaper">Wallpaper</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="download">Download</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
    <string name="tags">Tags</string>
    <string name="details">Details</string>
    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="tab_fav_text_1">Wallpapers</string>
    <string name="tab_fav_text_2">GIFs</string>
    <string name="downloads">Downloads</string>
    <string name="gif_saved">GIF saved</string>
    <string name="gif_already_saved">GIF already saved</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="downloading_gif">Downloading GIF</string>
    <string name="enter_rating">Please enter rating</string>
    <string name="download_path">Download Path</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>
    <string name="get_more_gif">Get more amazing GIFs, download now</string>
    <string name="rate_this_wall">Rate this Wallpaper</string>
    <string name="rate_this_gif">Rate this GIF</string>
    <string name="headertxt">Wallpaper Everyday</string>

    <string name="admobIdPub">pub-numradyaladmobhna</string>
    <string name="urlprivacypolicy">http://.html</string>
</resources>
