<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_hideshow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="6dp"
                    android:src="@mipmap/download"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line" />

            <LinearLayout
                android:id="@+id/ll_fav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/iv_wall_fav"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/fav_round"
                    android:visibility="gone"/>

                <com.like.LikeButton
                    android:id="@+id/button_wall_fav"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    app:like_drawable="@mipmap/fav_round_hover"
                    app:unlike_drawable="@mipmap/fav_round"
                    app:circle_end_color="@color/colorPrimary"
                    app:circle_start_color="@color/red"
                    app:dots_primary_color="@color/colorPrimary"
                    app:dots_secondary_color="@color/red"
                    app:icon_size="40dp"
                    app:anim_scale_factor="2"
                    app:is_enabled="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite"
                    android:fontFamily="@font/aclonica"

                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line" />

            <LinearLayout
                android:id="@+id/ll_rate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="6dp"
                    android:src="@mipmap/rate_blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line" />

            <LinearLayout
                android:id="@+id/ll_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="6dp"
                    android:src="@mipmap/share_round_orange"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:fontFamily="@font/aclonica"

                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/views"
                        android:textColor="@color/white"
                        android:fontFamily="@font/aclonica"

                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/views"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"/>

                        <TextView
                            android:id="@+id/tv_wall_details_views"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white80"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads"
                        android:textColor="@color/white"
                        android:fontFamily="@font/aclonica"

                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/download_arrow"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"/>

                        <TextView
                            android:id="@+id/tv_wall_details_downloads"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white80" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/ratings"
                        android:fontFamily="@font/aclonica"

                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_wall_details"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="5"
                        android:numStars="5"
                        android:theme="@style/RatingBar1" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white30" />

            <LinearLayout
                android:id="@+id/ll_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    android:fontFamily="@font/aclonica"

                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_wall_details_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white80" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>